--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ h2:hover {
 
 h2 i {
   margin-right: 10px;
-  color: #00bcd4; /* Color for the icons */
+  color: #00bcd4;
 }
 
 section p:hover {
